--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,13 @@
 <section class="page-content">
 <h1>Bearbeiten <%= resource_name.to_s.humanize %></h1>
-
+<%
+if @user.photo.attached?
+  @user_photo = polymorphic_url @user.photo
+else
+  @user_photo = '/assets/default_user.jpg'
+end
+puts @user_photo
+%>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
@@ -37,6 +44,16 @@
   </div>
 
   <div class="new_user__container new_user__photo">
+  <%= image_tag(@user_photo, :size => "150x150", :alt => @user.nickName, :id=>'old_user_photo', :class=>'user-image') %>
+  <div class="camera">
+    <video id="video">Video stream not available.</video>
+    <p id="startbutton">Take photo</p> 
+  </div>
+  <canvas id="canvas">
+  </canvas>
+  <div class="output">
+    <img id="photo" alt="The screen capture will appear in this box."> 
+  </div>
     <%= f.label :photo %>
     <%= f.file_field :photo %>
   </div>
