--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -8,7 +8,7 @@ else
 end
 puts @user_photo
 %>
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :patch }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="new_user__container new_user__nickName">
@@ -38,22 +38,7 @@ puts @user_photo
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
-  <div class="new_user__container new_user__pw-current">
-    <%= f.label :current_password %> <i>(zur Bestätigung der Änderung)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
   <div class="new_user__container new_user__photo">
-  <%= image_tag(@user_photo, :size => "150x150", :alt => @user.nickName, :id=>'old_user_photo', :class=>'user-image') %>
-  <div class="camera">
-    <video id="video">Video stream not available.</video>
-    <p id="startbutton">Take photo</p> 
-  </div>
-  <canvas id="canvas">
-  </canvas>
-  <div class="output">
-    <img id="photo" alt="The screen capture will appear in this box."> 
-  </div>
     <%= f.label :photo %>
     <%= f.file_field :photo %>
   </div>
