--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -48,39 +48,6 @@ div {
   }
 }
 
-#notice {
-  color: $color__green--dark;
-}
-
-// .field_with_errors {
-//   padding: 2px;
-//   background-color: red;
-//   display: table;
-// }
-
-// #error_explanation {
-//   width: 450px;
-//   border: 2px solid red;
-//   padding: 7px 7px 0;
-//   margin-bottom: 20px;
-//   background-color: #f0f0f0;
-
-//   h2 {
-//     text-align: left;
-//     font-weight: bold;
-//     padding: 5px 5px 5px 15px;
-//     font-size: 12px;
-//     margin: -7px -7px 0;
-//     background-color: #c00;
-//     color: #fff;
-//   }
-
-//   ul li {
-//     font-size: 12px;
-//     list-style: square;
-//   }
-// }
-
 label {
   display: block;
 }
@@ -210,15 +177,15 @@ h3{
       font-size: 1rem;
       font-weight: 300;
 
-      &:invalid {
-        outline: 0;
-        color: $color__pink--dark;
-        border-color: $color__pink--dark;
-      }
-      &:focus,
-      &:valid {
-        border-color: $color__green--light;
-      }
+      // &:invalid {
+      //   outline: 0;
+      //   color: $color__pink--dark;
+      //   border-color: $color__pink--dark;
+      // }
+      // &:focus,
+      // &:valid {
+      //   border-color: $color__green--light;
+      // }
     }
   }
 
@@ -339,6 +306,41 @@ h3{
 
       }
   }
+}
+
+// Validations
+.field_with_errors {
+  
+  > label{
+    color: $color__pink--dark;
+    padding: 0.3rem 0;
+  }
+
+  input{
+    outline: 0;
+    color: $color__pink--dark;
+    border-color: $color__pink--dark;
+  }
+}
+.field_with_errors + p {
+  color: $color__pink--dark;
+} 
+.field_with_errors + h2, .field_with_errors + p + h2 {
+  color: $color__white;
+  background-color: $color__pink--dark;
+  font-size: 1.1rem;
+  padding: 0.5rem;
+  margin: 0 0 0.7rem;
+  width: fit-content;
+} 
+
+#error_explanation {
+  font-size: 1.1rem;
+
+  p {
+    color: $color__pink--dark;
+    margin: 1rem 0 0 0;
+  } 
 }
 
 // Media Queries
